# qFoldIT

./: LICENSE  README.md
QuPepFold/: MANIFEST.in  PKG-INFO  pyproject.toml  readme.md  setup.py
QuPepFold/.github/workflows/: publish.yml
QuPepFold/qupepfold/: __init__.py  cli.py  qupepfold.py
QuPepFold/qupepfold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
QuPepFold/scripts/: qupepfold
