[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qupepfold"
version = "0.8.0"
description = "QuPepFold: Quantum peptide folding simulations with Qiskit"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "qiskit>=0.39",
  "qiskit-aer",
  "numpy",
  "matplotlib",
  "scipy",
]
authors = [
  { name="Akshay Uttarkar", email="akshayuttarkar@gmail.com" },
]
license = { text="MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Quantum Computing",
]

[project.scripts]
qupepfold = "qupepfold.cli:main"
